--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -15,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1E3A8A; /* azul oscuro */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #93C5FD; /* azul claro */
 }
 
 @keyframes App-logo-spin {
